project(arora-cacheinfo)
find_package(Qt5Widgets REQUIRED)
find_package(Qt5Core REQUIRED)
find_package(Qt5Gui REQUIRED)
find_package(Qt5Network REQUIRED)
add_executable(arora-cacheinfo main.cpp)
qt5_use_modules(arora-cacheinfo Widgets)
qt5_use_modules(arora-cacheinfo Core)
qt5_use_modules(arora-cacheinfo Gui)
qt5_use_modules(arora-cacheinfo Network)
