project(endorphin-cacheinfo)
find_package(Qt5Widgets REQUIRED)
find_package(Qt5Core REQUIRED)
find_package(Qt5Gui REQUIRED)
find_package(Qt5Network REQUIRED)
add_executable(endorphin-cacheinfo main.cpp)
qt5_use_modules(endorphin-cacheinfo Widgets)
qt5_use_modules(endorphin-cacheinfo Core)
qt5_use_modules(endorphin-cacheinfo Gui)
qt5_use_modules(endorphin-cacheinfo Network)
